namespace java com.moseeker.thrift.gen.dao.struct.dictdb
namespace py thrift_gen.gen.dao.struct.dictdb


struct DictCityMapDO {

	1: optional i32 id,	//null
	2: optional i32 code,	//null
	3: optional i32 codeOther,	//null
	4: optional i32 channel,	//null
	5: optional i32 status,	//null
	6: optional string createTime	//null

}
